<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity12a">

    <Button
        android:id="@+id/hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="showToast"
        />

    <Button
        android:id="@+id/count213"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="countUp"
        />

    <TextView
        android:id="@+id/show_count"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hello"
        app:layout_constraintBottom_toTopOf="@id/count213"
        android:text="@string/_0"
        android:textSize="160sp"
        android:textStyle="bold"
        android:background="#FFFF00"
        android:gravity="center"
        />
</androidx.constraintlayout.widget.ConstraintLayout>